--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -2,7 +2,7 @@ name: Download adblock source list
 
 on:
   schedule:
-    - cron: 0 */12 * * *
+    - cron: 0 */2 * * *
   workflow_dispatch:
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
       - name: energized blu
         run: |
           echo "Downloading adblock source list..."
-          curl -s https://transfer.sh/AhB1QV/hello.txt -o energized_blu_adblock.yaml
+          curl -s https://block.energized.pro/blu/formats/domains.txt -o energized_blu_adblock.yaml
           sed -ie '/^#/! s/^/DOMAIN,/' energized_blu_adblock.yaml
           rm -fr energized_blu_adblock.yamle
           
