--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -17,7 +17,7 @@ jobs:
           curl -s https://block.energized.pro/extensions/xtreme/formats/domains.txt -o extensions_extreme.yaml
           cat extensions_extreme.yaml >> energized_blu_adblock.yaml
           sed -ie '/^#/! s/^/DOMAIN,/' energized_blu_adblock.yaml
-          rm -fr energized_blu_adblock.yamle extensions_extreme.yamle
+          rm -fr energized_blu_adblock.yamle extensions_extreme.yamle extensions_extreme.yaml
           
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
