--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -16,10 +16,7 @@ jobs:
           curl -s https://block.energized.pro/blu/formats/domains.txt -o energized_blu_adblock.yaml
           sed -ie '/^#/! s/^/  - DOMAIN,/' energized_blu_adblock.yaml
           sed -i '\|# E N E R G I Z E D  B E G I N S|,\|^# --------------------------------------------|{s/^# --------------------------------------------/# E N E R G I Z E D  B E G I N S\n# --------------------------------------------\npayload:/p;d}' energized_blu_adblock.yaml
-          curl -s https://block.energized.pro/extensions/xtreme/formats/domains.txt -o extensions_extreme.yaml
-          sed -ie '/^#/! s/^/  - DOMAIN,/' extensions_extreme.yaml
-          cat extensions_extreme.yaml >> energized_blu_adblock.yaml
-          rm -fr energized_blu_adblock.yamle extensions_extreme.yamle extensions_extreme.yaml
+          rm -fr energized_blu_adblock.yamle
           
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
