--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -12,12 +12,18 @@ jobs:
       - uses: actions/checkout@v3
       - name: energized blu
         run: |
-          echo "Downloading adblock source list..."
+          echo "Downloading Energized Blu source list..."
           curl -s https://block.energized.pro/blu/formats/domains.txt -o energized_blu_adblock.yaml
           sed -ie '/^#/! s/^/  - DOMAIN,/' energized_blu_adblock.yaml
           sed -i '\|# E N E R G I Z E D  B E G I N S|,\|^# --------------------------------------------|{s/^# --------------------------------------------/# E N E R G I Z E D  B E G I N S\n# --------------------------------------------\npayload:/p;d}' energized_blu_adblock.yaml
           rm -fr energized_blu_adblock.yamle
           
+          echo "Downloading ABPindo source list..."
+          curl -s https://raw.githubusercontent.com/ABPindo/indonesianadblockrules/master/subscriptions/domain_annoyance.txt -o abpindo_annoyance_adblock.yaml
+          sed -ie 's/^/  - DOMAIN,/' abpindo_annoyance_adblock.yaml
+          sed -i '1 i\payload:' abpindo_annoyance_adblock.yaml
+          sed -i '1 i\# Sumber: ABPindo_annoyance https://github.com/ABPindo/indonesianadblockrules' abpindo_annoyance_adblock.yaml
+          rm -fr abpindo_annoyance_adblock.yamle
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic update
