--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -12,14 +12,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: adblock
         run: |
-          echo "Downloading Adguard DNS source list..."
+          echo "Downloading Adguard DNS block list..."
           curl -s https://v.firebog.net/hosts/AdguardDNS.txt -o AdguardDNS.yaml
           sed -i '/^$/d' AdguardDNS.yaml
           sed -ie '/^#/! s/^/  - DOMAIN,/' AdguardDNS.yaml
           sed -i '6i \\npayload:' AdguardDNS.yaml
           rm -fr AdguardDNS.yamle
           
-          echo "Downloading AdAway source list..."
+          echo "Downloading AdAway block list..."
           curl -s 'https://adaway.org/hosts.txt' -o adaway.yaml
           sed -i 's/127\.0\.0\.1  localhost//g; s/::1  localhost//g; s/^127\.0\.0\.1\s/  - DOMAIN,/g' adaway.yaml
           sed -i 's/^#\s\[.*\]$//g' adaway.yaml
@@ -27,6 +27,11 @@ jobs:
           sed -i '20s/#/#\n\npayload:/' adaway.yaml
           rm -fr adaway.yamle
           
+          echo "Downloading ABPIndo block list..."
+          curl -s 'https://raw.githubusercontent.com/ABPindo/indonesianadblockrules/master/subscriptions/domain.txt' ABPindo.yaml
+          sed -ie '/^#/! s/^/  - DOMAIN,/' ABPindo.yaml
+          sed -i '1s/^/payload:\n/' ABPindo.yaml
+          rm -fr ABPindo.yamle
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic update
