--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -37,7 +37,7 @@ jobs:
           curl -s 'https://big.oisd.nl/domainswild' -o oisd_big_domainswild.txt
           awk '/^\*\./ && !x {print "payload:"; x=1} 1' oisd_big_domainswild.txt > oisd_big.yaml
           sed -i 's/^[*]\./  - DOMAIN,/g' oisd_big.yaml
-          rm -fr oisd_big.yaml
+          rm -fr oisd_big.yamle oisd_big_domainswild.txt
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic update
