--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -15,13 +15,13 @@ jobs:
           echo "Downloading Adguard DNS block list..."
           curl -s https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt -o filter.txt
           grep -o -P '(?<=^\|\|).*(?=\^$)' filter.txt | grep -v '\*' > AdguardDNS.yaml
-          sed -ie '/^#/! s/^/  - DOMAIN,/' AdguardDNS.yaml
+          sed -ie '/^#/! s/^/  - DOMAIN-SUFFIX,/' AdguardDNS.yaml
           sed -i '1i payload:' AdguardDNS.yaml
           rm -fr AdguardDNS.yamle filter.txte filter.txt
           
           echo "Downloading AdAway block list..."
           curl -s 'https://adaway.org/hosts.txt' -o adaway.yaml
-          sed -i 's/127\.0\.0\.1  localhost//g; s/::1  localhost//g; s/^127\.0\.0\.1\s/  - DOMAIN,/g' adaway.yaml
+          sed -i 's/127\.0\.0\.1  localhost//g; s/::1  localhost//g; s/^127\.0\.0\.1\s/  - DOMAIN-SUFFIX,/g' adaway.yaml
           sed -i 's/^#\s\[.*\]$//g' adaway.yaml
           sed -i '/^$/d' adaway.yaml
           sed -i '20s/#/#\n\npayload:/' adaway.yaml
@@ -29,14 +29,14 @@ jobs:
           
           echo "Downloading ABPIndo block list..."
           curl -s 'https://raw.githubusercontent.com/ABPindo/indonesianadblockrules/master/subscriptions/domain.txt' -o ABPindo.yaml
-          sed -ie '/^#/! s/^/  - DOMAIN,/' ABPindo.yaml
+          sed -ie '/^#/! s/^/  - DOMAIN-SUFFIX,/' ABPindo.yaml
           sed -i '1s/^/payload:\n/' ABPindo.yaml
           rm -fr ABPindo.yamle
 
           echo "Downloading oisd big block list..."
           curl -s 'https://big.oisd.nl/domainswild' -o oisd_big_domainswild.txt
           awk '/^\*\./ && !x {print "payload:"; x=1} 1' oisd_big_domainswild.txt > oisd_big.yaml
-          sed -i 's/^[*]\./  - DOMAIN,/g' oisd_big.yaml
+          sed -i 's/^[*]\./  - DOMAIN-SUFFIX,/g' oisd_big.yaml
           rm -fr oisd_big.yamle oisd_big_domainswild.txt
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
