--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           echo "Downloading oisd big block list..."
           curl -s 'https://big.oisd.nl/domainswild' -o oisd_big_domainswild.txt
-          awk '/^\*\./ && !x {print "#OpenClash AdBlock: https://github.com/hillz2/openclash_adblock \npayload:"; x=1} 1' oisd_big_domainswild.txt > oisd_big.yaml
+          awk '/^\*\./ && !x {print "# OpenClash AdBlock: https://github.com/hillz2/openclash_adblock \n\npayload:"; x=1} 1' oisd_big_domainswild.txt > oisd_big.yaml
           sed -i 's/^[*]\./  - DOMAIN-SUFFIX,/g' oisd_big.yaml
           rm -fr oisd_big.yamle oisd_big_domainswild.txt
       - uses: stefanzweifel/git-auto-commit-action@v4
