--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
       - name: adblock
         run: |
           echo "Downloading oisd big block list..."
