--- a/.github/workflows/adblock.yml
+++ b/.github/workflows/adblock.yml
@@ -10,13 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - name: oisd_big
+      - name: adblock
         run: |
           echo "Downloading oisd big block list..."
           curl -s 'https://big.oisd.nl/domainswild' -o oisd_big_domainswild.txt
           awk '/^\*\./ && !x {print "# OpenClash AdBlock: https://github.com/hillz2/openclash_adblock \n\npayload:"; x=1} 1' oisd_big_domainswild.txt > oisd_big.yaml
           sed -i 's/^[*]\./  - DOMAIN-SUFFIX,/g' oisd_big.yaml
           rm -fr oisd_big.yamle oisd_big_domainswild.txt
+
+          echo "Downloading oisd small block list..."
+          curl -s 'https://small.oisd.nl/domainswild' -o oisd_small_domainswild.txt
+          awk '/^\*\./ && !x {print "# OpenClash AdBlock: https://github.com/hillz2/openclash_adblock \n\npayload:"; x=1} 1' oisd_small_domainswild.txt > oisd_small.yaml
+          sed -i 's/^[*]\./  - DOMAIN-SUFFIX,/g' oisd_small.yaml
+          rm -fr oisd_small.yamle oisd_small_domainswild.txt
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic update
