--- a/.github/workflows/adaway.yml
+++ b/.github/workflows/adaway.yml
@@ -3,7 +3,7 @@ name: Process AdAway Hosts
 on:
   workflow_dispatch: # Allows manual trigger
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *" # Runs every 12 hours
 
 jobs:
   process-hosts:
@@ -12,7 +12,7 @@ jobs:
     steps:
       # Step 1: Checkout repository
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       # Step 2: Download the hosts.txt file
       - name: Download hosts.txt
@@ -64,9 +64,4 @@ jobs:
         run: ./transform_hosts.sh
 
       # Step 5: Upload the processed file as an artifact
-      - name: Upload processed file
-        uses: actions/upload-artifact@v4
-        with:
-          name: processed-hosts
-          path: output.yaml
-          commit_message: Automatic update
+      - name: Upload
