--- a/.github/workflows/abpindo.yml
+++ b/.github/workflows/abpindo.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *" # Runs daily at midnight UTC
 
 jobs:
   process_adblock_list:
