--- a/.github/workflows/abpindo.yml
+++ b/.github/workflows/abpindo.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add abpindo.yaml
-          git commit -m "Update abpindo.yaml with processed domain list"
+          git commit -m "Update abpindo.yaml [skip ci]"
           git push
