--- a/.github/workflows/abpindo.yml
+++ b/.github/workflows/abpindo.yml
@@ -31,6 +31,9 @@ jobs:
             echo "  - DOMAIN-SUFFIX,${domain}" >> abpindo.yaml
           done < domain.txt
 
+      - name: Clean up untracked files
+        run: git clean -fd
+
       - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
