--- a/.github/workflows/oisd.yml
+++ b/.github/workflows/oisd.yml
@@ -15,13 +15,13 @@ jobs:
           echo "Downloading oisd big block list..."
           curl -s 'https://big.oisd.nl/domainswild' -o oisd_big_domainswild.txt
           awk '/^\*\./ && !x {print "# OpenClash AdBlock: https://github.com/hillz2/openclash_adblock \n\npayload:"; x=1} 1' oisd_big_domainswild.txt > oisd_big.yaml
-          sed -i 's/^[*]\./  - DOMAIN,/g' oisd_big.yaml
+          sed -i 's/^[*]\./  - DOMAIN-SUFFIX,/g' oisd_big.yaml
           rm -fr oisd_big.yamle oisd_big_domainswild.txt
 
           echo "Downloading oisd small block list..."
           curl -s 'https://small.oisd.nl/domainswild' -o oisd_small_domainswild.txt
           awk '/^\*\./ && !x {print "# OpenClash AdBlock: https://github.com/hillz2/openclash_adblock \n\npayload:"; x=1} 1' oisd_small_domainswild.txt > oisd_small.yaml
-          sed -i 's/^[*]\./  - DOMAIN,/g' oisd_small.yaml
+          sed -i 's/^[*]\./  - DOMAIN-SUFFIX,/g' oisd_small.yaml
           rm -fr oisd_small.yamle oisd_small_domainswild.txt
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
